--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,11 @@
         "test": "./vendor/bin/phpunit"
     },
     "require": {
-        "react/socket": "dev-master"
+        "react/socket": "^1.12"
     },
     "require-dev": {
-        "phpstan/phpstan": "^0.11.2",
-        "phpunit/phpunit": "^8.0",
-        "phpstan/phpstan-phpunit": "^0.11.0"
+        "phpstan/phpstan": "^1.9",
+        "phpunit/phpunit": "^9.5",
+        "phpstan/phpstan-phpunit": "^1.3"
     }
 }
